crates/zir-codegen-cranelift/src/snapshots/zir_codegen_cranelift__tests__clif_add_function.snap
---
source: crates/zir-codegen-cranelift/src/lib.rs
expression: clif
---
function u0:0(i64, i64) -> i64 system_v {
block0(v0: i64, v1: i64):
    v2 = iadd v0, v1
    return v2
}
