crates/zir-codegen-cranelift/src/snapshots/zir_codegen_cranelift__tests__clif_const_42.snap
---
source: crates/zir-codegen-cranelift/src/lib.rs
expression: clif
---
function u0:0() -> i64 system_v {
block0:
    v0 = iconst.i64 42
    return v0  ; v0 = 42
}
