crates/zir-codegen-cranelift/src/snapshots/zir_codegen_cranelift__tests__clif_max_function.snap
---
source: crates/zir-codegen-cranelift/src/lib.rs
expression: clif
---
function u0:0(i64, i64) -> i64 system_v {
block0(v0: i64, v1: i64):
    v4 -> v0
    v5 -> v1
    v2 = icmp sgt v0, v1
    v3 = icmp_imm eq v2, 0
    brif v3, block2, block1

block1:
    jump block3(v4)

block2:
    jump block3(v5)

block3(v6: i64):
    return v6
}
